# kite

./: .gitattributes  .gitignore  LICENSE  Makefile  README  README.md  README.rst  example.kite  kite  meson.build
examples/: facto.kite  fib.kite  sum.kite
lib/: func.kite  io.kite  math.kite
src/: ast.h  builtin.h  ctx.h  intr.h  lexer.h  main.c  parser.h  token.h
stdlib/: func.kite  io.kite
